# Practice_DE

./: .gitignore  README.md  dab-config.json  pyproject.toml
BlobAzure/: main.py
BlobAzure/src/Repository/sale_data/: Transaction.py  Transaction.sql  model.py  query.py
BlobAzure/src/Repository/sample_employee_data/: Employee.py  Employee.sql  model.py  query.py
BlobAzure/src/Services/: load_sample_data.py  logic.py
BlobAzure/src/utils/: azure_blob.py  db.py
BlobAzure/src/utils/common/: etl_utils.py
blobfunctions/: function_app.py
data-api-builder/configs/: dab-config.json
functions/: .gitignore  README.md  db.py  document.md  function_app.py  process.py  requirements.txt
functions/azure-webjobs-secrets/1missing/: host.json
oop/: area.py
pattern/: Abstarct_Method.py  Builder_Method.py  Factory_Method.py
test/: dab-config.json
