[tool.poetry]
name = "BlobAzure"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
jupyter = "^1.0.0"
lab = "^8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
main = "BlobAzure.main:main"
